--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,10 @@
     "dashboard",
     "widget",
     "adf",
-    "adf-widget"
+    "adf-widget",
+    "travis",
+    "ci",
+    "build"
   ],
   "description": "Build history from Travis CI",
   "dependencies": {
